k8s-gitops/policies/gatekeeper/templates/k8srequiredresources_template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResources
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresources
        violation[{"msg": msg}] {
          c := input.review.object.spec.template.spec.containers[_]
          not has_field(c, "resources")
          msg := "containers must define resources.requests and resources.limits"
        }
        has_field(obj, field) { obj[field] }
